// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Local Media No Media 1`] = `
Array [
  <div
    className="wxc-local-media wxc-local-media-no-media"
  >
    <div
      className="wxc-avatar"
    >
      <div
        className="avatar-content"
      >
        <svg
          className="placeholder placeholder-6"
          viewBox="0 0 40 40"
        >
          <text
            x="50%"
            y="50%"
          >
            BG
          </text>
        </svg>
        <img
          alt="avatar"
          className=""
          onError={[Function]}
          src="./images/barbara.png"
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Local Media Screen Share 1`] = `
Array [
  <div
    className="wxc-local-media"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Local Media Video 1`] = `
Array [
  <div
    className="wxc-local-media"
  >
    <video
      autoPlay={true}
      playsInline={true}
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
